init: start project

--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -2,14 +2,14 @@
 $black: #000;
 $white: #fff;
 
-$main-text-color: #000;
+$main-text-color: #1E212C;
 $main-bg-color: #fff;
 
-$main-accent-color: red;
+$main-accent-color: #FF5A30;
 
 // fonts
-$main-font-family: "Roboto", sans-serif;
-$main-font-size: 14px;
+$main-font-family: "Ubuntu", sans-serif;
+$main-font-size: 16px;
 
 // container
 $container-max-width-xs: 100%;
@@ -17,7 +17,7 @@ $container-max-width-sm: 540px;
 $container-max-width-md: 720px;
 $container-max-width-lg: 960px;
 $container-max-width-xl: 1140px;
-$container-max-width-xxl: 1320px;
+$container-max-width-xxl: 1260px;
 
 $grid-gap-side: 15px;
 
