--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 
 //Подключение базовых стилей
 @import "global/normalize.scss";
-// @import "global/fonts.scss";
+@import "global/fonts.scss";
 @import "global/theme.scss";
 @import "global/typography.scss";
 
