--- a/src/styles/global/_fonts.scss
+++ b/src/styles/global/_fonts.scss
@@ -1,4 +1,6 @@
 @import '../mixins/fonts.scss';
 
-// Пример подключения:
-// @include fonts("Manrope", "Manrope-Medium", 500);
+@include fonts("Ubuntu", "Ubuntu-Regular", 400);
+@include fonts("Ubuntu", "Ubuntu-Light", 300);
+@include fonts("Ubuntu", "Ubuntu-Medium", 500);
+@include fonts("Ubuntu", "Ubuntu-Bold", 700);
