--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -7,7 +7,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1, .h1{
   font-weight: 700;
-  font-size: 32px;
+  font-size: 64px;
+  line-height: 120%; 
+  letter-spacing: 1px;
   
   @media only screen and (max-width: $bp-lg){
       
@@ -16,7 +18,8 @@ h1, .h1{
 
 h2, .h2{
   font-weight: 700;
-  font-size: 28px;
+  font-size: 46px;
+  line-height: 130%;
 
   @media only screen and (max-width: $bp-lg){
       
@@ -25,7 +28,8 @@ h2, .h2{
 
 h3, .h3 {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 28px;
+  line-height: 150%;
 
   @media only screen and (max-width: $bp-lg){
       
@@ -34,7 +38,8 @@ h3, .h3 {
 
 h4, .h4 {
   font-weight: 700;
-  font-size: 22px;
+  font-size: 20px;
+  line-height: 150%;
 
   @media only screen and (max-width: $bp-lg){
       
