init: start header

--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -1,1 +1,37 @@
-<header>Шапка</header>
+<header class="header">
+  <div class="container header__container">
+    <a href="/" class="logo header__logo">
+      <img src="assets/img/icons/logo-header.svg" alt="Логотип">        
+    </a> 
+    <nav class="header__nav top-menu">
+      <ul class="top-menu__list">
+        <li class="top-menu__item"><a href="#" class="top-menu__link">About Us</a></li>
+        <li class="top-menu__item"><a href="#" class="top-menu__link">Services</a></li>
+        <li class="top-menu__item"><a href="#" class="top-menu__link">Work</a></li>
+        <li class="top-menu__item"><a href="#" class="top-menu__link">News</a></li>
+        <li class="top-menu__item"><a href="#" class="top-menu__link">Contacts</a></li>
+      </ul>
+    </nav>
+    <div class="header__contacts header-contacts">
+      <div class="header-contacts__item">
+        <div class="header-contacts__icon">
+
+        </div>
+        <div class="header-contacts__info">
+           <span>Call us</span>
+           <a href="tel:4055550128">(405) 555-0128</a>
+        </div>
+      </div>
+      <div class="header-contacts__item">
+        <div class="header-contacts__icon">
+
+        </div>
+        <div class="header-contacts__info">
+           <span>Talk to us</span>
+           <a href="mailto:hello@createx.com">hello@createx.com</a>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+</header>
