--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -1,9 +1,12 @@
-<header class="header">
+<header class="header @@class">
   <div class="container header__container">
-    <a href="/" class="logo header__logo">
+    <a href="/" class="header__logo">
       <img src="assets/img/icons/logo-header.svg" alt="Логотип">        
     </a> 
     <nav class="header__nav top-menu">
+      <button class="top-menu__close" type="button">
+        Закрыть
+      </button>
       <ul class="top-menu__list">
         <li class="top-menu__item"><a href="#" class="top-menu__link">About Us</a></li>
         <li class="top-menu__item"><a href="#" class="top-menu__link">Services</a></li>
@@ -14,24 +17,27 @@
     </nav>
     <div class="header__contacts header-contacts">
       <div class="header-contacts__item">
-        <div class="header-contacts__icon">
-
-        </div>
+        <svg class="header-contacts__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#iphone"></use>
+        </svg>
         <div class="header-contacts__info">
-           <span>Call us</span>
-           <a href="tel:4055550128">(405) 555-0128</a>
+           <span class="text-small-bold">Call us</span>
+           <a class="text-large" href="tel:4055550128">(405) 555-0128</a>
         </div>
       </div>
       <div class="header-contacts__item">
-        <div class="header-contacts__icon">
-
-        </div>
+        <svg class="header-contacts__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#chat"></use>
+        </svg>
         <div class="header-contacts__info">
-           <span>Talk to us</span>
-           <a href="mailto:hello@createx.com">hello@createx.com</a>
+           <span class="text-small-bold">Talk to us</span>
+           <a class="text-large" href="mailto:hello@createx.com">hello@createx.com</a>
         </div>
       </div>
     </div>
+    <button class="burger header__burger" type="button">
+      <span>Меню</span>
+    </button>
     
   </div>
 </header>
