--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,3 +1,223 @@
-header {
+.header {
+  padding: 20px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+
+
+  &--main {
+    background-color: $white;
+  }
+
+  &__container {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+
+    @media only screen and (max-width: $bp-xl){
+        gap: 20px;
+    }
+  }
+
+  &__logo {
+    display: block;
+    width: 130px;
+    height: 22px;
+    flex-shrink: 0;
+
+    @media only screen and (max-width: $bp-xl){
+       width: 100px; 
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  &__nav {
+
+  }
+
+  &__contacts {
+  }
+
+  &__burger {
+    display: none;
+
+    @media only screen and (max-width: $bp-lg){
+       display: block; 
+       margin-left: auto;
+    }
+  }
+}
+.top-menu {
+
+  @media only screen and (max-width: $bp-lg){
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 15;
+    background-color: $white;
+    min-height: 100vh;
+    max-height: 100vh;
+    max-width: 95vw;
+    min-width: 50vw;
+    overflow-y: auto;
+    padding: 20px 20px 10px 20px; 
+    transition: transform .3s ease-in-out;
+
+    &:not(.is-active) {
+      transform: translateX(100%);
+    }
+  }
+
+  @media only screen and (max-width: $bp-sm){
+     max-width: unset;
+     width: 100%; 
+  }
+
+  &__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+
+    @media only screen and (max-width: $bp-lg){
+       flex-direction: column; 
+    }
+  }
+
+  &__item {
+  }
+
+  &__link {
+    color: $grey-800;
+    font-weight: 700;
+    line-height: 160%;
+    white-space: nowrap;
+
+    &:hover {
+      color: $main-accent-color;
+    }
+  }
+
+  &__close {
+    display: none;
+    width: 20px;
+    height: 20px;
+    color: transparent;
+    font-size: 0;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    z-index: 5;
+    background-image: url("data:image/svg+xml,%3Csvg width='23' height='23' viewBox='0 0 23 23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L21.6001 21.6001' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M21.6001 1L1 21.6001' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+    background-size: 20px;
+		background-repeat: no-repeat;
+		background-position: center;
+
+    @media only screen and (max-width: $bp-lg){
+       display: block; 
+    }
+    
+  }
+}
+.header-contacts {
+  margin-left: auto;
   display: flex;
+  gap: 36px;
+
+  @media only screen and (max-width: $bp-xl){
+     gap: 5px 20px; 
+  }
+
+  @media only screen and (max-width: $bp-md){
+     flex-wrap: wrap;
+  }
+
+  @media only screen and (max-width: $bp-sm){
+     display: none; 
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    @media only screen and (max-width: $bp-xl){
+       gap: 5px; 
+    }
+  }
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+    color: $main-accent-color;
+
+    @media only screen and (max-width: $bp-xl){
+       width: 24px;
+       height: 24px; 
+    }
+  }
+
+  &__info {
+
+    span {
+      color: $grey-800;
+      display: block;
+
+      @media only screen and (max-width: $bp-lg){
+         display: none; 
+      }
+    }
+
+    a {
+      white-space: nowrap;
+
+      @media only screen and (max-width: $bp-xl){
+         font-size: 14px; 
+      }
+
+      &:hover {
+        color: $main-accent-color;
+      }
+
+    }
+  }
+}
+
+.burger {
+  position: relative;
+  width: 30px;
+  height: 20px;
+  color: transparent;
+  font-size: 0;
+  cursor: pointer;
+  z-index: 5;
+
+  & span, &::after, &::before{
+    content: "";
+    transition: all .3s ease 0s;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: $main-text-color;
+  }
+  &::before {
+    top: 0px;
+  }
+  &::after {
+    bottom: 0px;
+  }
+  span {
+    top: calc(50% - 1px);
+  }
 }
