feat: add color var

--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -6,6 +6,7 @@ $main-text-color: #1E212C;
 $main-bg-color: #fff;
 
 $main-accent-color: #FF5A30;
+$grey-800: #424551;
 
 // fonts
 $main-font-family: "Ubuntu", sans-serif;
