--- a/src/ui/button/index.scss
+++ b/src/ui/button/index.scss
@@ -15,6 +15,12 @@
   text-transform: uppercase;
   transition: all .2s ease-in-out;
 
+  @media only screen and (max-width: $bp-md){
+    padding: 5px 24px;
+    min-height: 36px;
+    font-size: 12px;
+  }
+
   &:hover, &:active {
     background: $main-accent-color-hover;
   }
@@ -23,14 +29,27 @@
     opacity: 0.4;
   }
 
+  &:focus {
+    outline: none;
+    box-shadow: 0px 0px 5px 1px $main-accent-color-hover;
+  }
+
   &--lg {
-    padding: 5px 40px;
-    min-height: 52px;
+
+    @media only screen and (min-width: $bp-lg + 1){
+      padding: 5px 40px;
+      min-height: 52px;
+      font-size: 16px;
+    }
   }
 
   &--sm {
-    padding: 5px 24px;
-    min-height: 36px;
+
+    @media only screen and (min-width: $bp-md + 1){
+      padding: 5px 24px;
+      min-height: 36px;
+      font-size: 12px;
+    }
   }
 
   &--border {
