--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -7,12 +7,19 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1, .h1{
   font-weight: 700;
-  font-size: 64px;
-  line-height: 120%; 
+  font-size: 72px;
+  line-height: 130%; 
   letter-spacing: 1px;
   
-  @media only screen and (max-width: $bp-lg){
-      
+  @media only screen and (max-width: $bp-xxl){
+    font-size: 64px;
+  }
+
+  @media only screen and (max-width: $bp-xl){
+    font-size: calc(1.8rem + 2.5vw);
+  }
+  @media only screen and (max-width: $bp-sm){
+     font-size: 36px; 
   }
 }
 
