feat: add some vars

--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -6,7 +6,9 @@ $main-text-color: #1E212C;
 $main-bg-color: #fff;
 
 $main-accent-color: #FF5A30;
+$main-accent-color-hover: #FC3300;
 $grey-800: #424551;
+$grey-900: #1E212C;
 
 // fonts
 $main-font-family: "Ubuntu", sans-serif;
@@ -28,4 +30,5 @@ $bp-sm: 575px;
 $bp-md: 767px;
 $bp-lg: 991px;
 $bp-xl: 1201px;
-$bp-xxl: 1401px;
+$bp-xxl: 1440px;
+$bp-xxxl: 1920px;
