--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,3 +1,153 @@
+@import 'src/styles/global/vars';
 .footer {
-  
+
+  padding: 80px 0;
+  background-color: $grey-900;
+  color: rgba($color: $white, $alpha: 0.6);
+
+  @media only screen and (max-width: $bp-sm){
+    padding: 50px 0;
+  }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px 50px;
+
+    @media only screen and (max-width: $bp-md){
+        flex-wrap: wrap;
+    }
+  }
+
+  &__col {
+    max-width: 495px;
+    flex: 1 1 50%;
+  }
+
+  &__info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 24px 60px;
+  }
+
+  &__logo {
+    display: inline-block;
+    width: 142px;
+    flex-shrink: 0;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  &__socials {
+
+  }
+
+  &__desc {
+    flex-grow: 1;
+  }
+
+  &__title {
+    color: $white;
+    margin-bottom: 24px;
+
+    @media only screen and (max-width: $bp-md){
+       margin-bottom: 12px; 
+    }
+  }
+
+  &__subscribe {
+  }
+
+  &__body {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px 10%;
+
+    @media only screen and (max-width: $bp-md){
+       margin-top: 30px; 
+    }
+  }
+
+  &__main-info {
+
+    font-style: normal;
+    
+    @media only screen and (max-width: $bp-sm){
+       font-size: 14px; 
+    }
+
+    p {     
+
+      &:not(:last-child){
+        margin-bottom: 4px;
+      }
+
+      span {
+      color: $white;
+      margin-right: 5px;
+      }
+    }
+  }
+
+  &__subtitle {
+    color: $white;
+    margin-bottom: 13px;
+  }
+
+  &__menu {
+  }
+
+  &__menu-list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    @media only screen and (max-width: $bp-sm){
+      font-size: 14px; 
+    }
+
+    li:not(:last-child){
+      margin-bottom: 4px;
+    }
+
+    a:hover {
+      color: $main-accent-color;
+    }
+  }
+
+  &__copyright {
+    margin-top: 60px;
+    color: $white;
+    font-size: 12px;
+    line-height: 150%;
+
+    @media only screen and (max-width: $bp-sm){
+       margin-top: 40px; 
+    }
+
+    svg {
+      width: 16px;
+      height: 16px;
+      fill: $main-accent-color;
+      vertical-align: middle;
+    }
+  }
+}
+
+.subscribe-form {
+
+  &__input {
+  }
+
+  &__submit {
+  }
+
+  &__agree {
+  }
 }
