--- a/src/ui/button/index.scss
+++ b/src/ui/button/index.scss
@@ -7,12 +7,14 @@
   padding: 5px 32px;
   min-height: 44px;
   border-radius: 4px;
+  border: none;
   background: $main-accent-color;
   color: $white;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.5px;
   text-transform: uppercase;
+  cursor: pointer;
   transition: all .2s ease-in-out;
 
   @media only screen and (max-width: $bp-md){
