--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@
 
 
 //Подключение компонентов
+@import "../components/socials/";
 @import "../components/header/";
 @import "../components/hero/";
+@import "../components/subscribe-form/";
 @import "../components/footer/";
