--- a/src/components/subscribe-form/index.html
+++ b/src/components/subscribe-form/index.html
@@ -1,6 +1,6 @@
 <form class="@@class subscribe-form">
   <div class="subscribe-form__wrapper">
-    <input class="subscribe-form__input" type="email" placeholder="Your email address ">
+    <input class="subscribe-form__input" type="email" name="email" placeholder="Your email address">
     <input class="subscribe-form__submit button" type="submit" value="subscribe">
   </div>
   <p class="subscribe-form__agree">*Subscribe to our newsletter to receive communications and early updates from Createx Construction Bureau.</p>
