--- a/src/ui/go-to-top/index.scss
+++ b/src/ui/go-to-top/index.scss
@@ -22,6 +22,11 @@
       right: 100px;
   }
 
+  @media only screen and (max-width: $bp-md){
+     right: 20px;
+     bottom: 20px; 
+  }
+
   &.is-active {
     opacity: 1;
     visibility: visible;
