--- a/src/components/hero/index.html
+++ b/src/components/hero/index.html
@@ -68,7 +68,7 @@
         </div>        
       </div>
     </div>
-    <div class="container"> 
+    <div class="container hero__container-pagination"> 
       <div class="slider__pagination hero__pagination swiper-pagination"></div>
     </div>
     <div class="slider__button-prev hero__button-prev swiper-button-prev"></div>
