feat: add video section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,11 +13,13 @@
 @import "../ui/input/";
 @import "../ui/slider/";
 @import "../ui/go-to-top/";
+@import "../ui/video-cover/";
 
 
 //Подключение компонентов
 @import "../components/socials/";
 @import "../components/header/";
 @import "../components/hero/";
+@import "../components/section/";
 @import "../components/subscribe-form/";
 @import "../components/footer/";
