--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -29,8 +29,11 @@ h2, .h2{
   font-size: 46px;
   line-height: 130%;
 
-  @media only screen and (max-width: $bp-lg){
-      
+  @media only screen and (max-width: $bp-xl){
+    font-size: calc(1.5rem + 1.8vw);
+  }
+  @media only screen and (max-width: $bp-sm){
+     font-size: 28px; 
   }
 }
 
@@ -80,6 +83,10 @@ h6, .h6 {
   &-large {
     font-size: 18px;
     line-height: 150%;
+
+    @media only screen and (max-width: $bp-sm){
+       font-size: 16px; 
+    }
   }
 
   &-small {
@@ -91,5 +98,9 @@ h6, .h6 {
     font-size: 14px;
     font-weight: 700;
     line-height: 150%;
+  }
+
+  &-center {
+    text-align: center;
   }
 }
