--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -7,6 +7,7 @@ $main-bg-color: #fff;
 
 $main-accent-color: #FF5A30;
 $main-accent-color-hover: #FC3300;
+$grey-700: #787A80;
 $grey-800: #424551;
 $grey-900: #1E212C;
 
