--- a/src/components/section/index.scss
+++ b/src/components/section/index.scss
@@ -12,6 +12,18 @@
      padding: 50px 0; 
   }
 
+  &--hidden {
+    overflow: hidden;
+  }
+
+  &--sm-pd {
+    padding: 60px 0;
+
+    @media only screen and (max-width: $bp-md){
+      padding: 30px 0; 
+   }
+  }
+
   h2, .h2 {
     margin-bottom: 24px;
 
@@ -25,6 +37,14 @@
   }
 
   &__video {
+    margin-top: 60px;
+
+    @media only screen and (max-width: $bp-md){
+       margin-top: 30px; 
+    }
+  }
+
+  & .benefits {
     margin-top: 60px;
 
     @media only screen and (max-width: $bp-md){
