feat: add connect benefits styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,5 +21,7 @@
 @import "../components/header/";
 @import "../components/hero/";
 @import "../components/section/";
+@import "../components/benefits/";
+
 @import "../components/subscribe-form/";
 @import "../components/footer/";
