--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -39,7 +39,7 @@ h2, .h2{
 
 h3, .h3 {
   font-weight: 700;
-  font-size: 28px;
+  font-size: 32px;
   line-height: 150%;
 
   @media only screen and (max-width: $bp-lg){
@@ -49,7 +49,7 @@ h3, .h3 {
 
 h4, .h4 {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 150%;
 
   @media only screen and (max-width: $bp-lg){
@@ -60,9 +60,10 @@ h4, .h4 {
 h5, .h5 {
   font-weight: 700;
   font-size: 20px;
+  line-height: 150%;
 
-  @media only screen and (max-width: $bp-lg){
-      
+  @media only screen and (max-width: $bp-sm){
+    font-size: 18px;
   }
 }
 
@@ -72,10 +73,6 @@ h6, .h6 {
   line-height: 150%;
   letter-spacing: 1px;
   text-transform: uppercase;
-
-  @media only screen and (max-width: $bp-lg){
-      
-  }
 }
 
 .text {
