--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ h1 {
 }
 
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
@@ -36,7 +37,8 @@ a {
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
 }
 
 b,
@@ -123,7 +125,8 @@ fieldset {
 }
 
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -141,7 +144,8 @@ textarea {
 
 [type=checkbox],
 [type=radio] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
 }
 
@@ -215,7 +219,8 @@ template {
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -243,6 +248,7 @@ body::before {
   content: "";
   background-color: #2a2a2a;
   opacity: 0;
+  -webkit-transition: opacity .3s ease-in-out,z-index 1s ease;
   transition: opacity .3s ease-in-out,z-index 1s ease;
 }
 
@@ -253,6 +259,7 @@ body.faded {
 body.faded::before {
   z-index: 2;
   opacity: .8;
+  -webkit-transition: opacity .3s ease-in-out,z-index 0s ease;
   transition: opacity .3s ease-in-out,z-index 0s ease;
 }
 
@@ -267,6 +274,7 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+  -webkit-transition: color .2s ease-in-out;
   transition: color .2s ease-in-out;
 }
 
@@ -282,22 +290,32 @@ img {
 .icon-svg {
   width: 48px;
   height: 48px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   fill: currentColor;
 }
 
 .wrapper {
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .wrapper>main {
-  flex: 1 0 auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .wrapper>footer {
-  flex: 0 0 auto;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
 }
 
 .container {
@@ -386,9 +404,15 @@ h6,
 }
 
 .button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 5px 32px;
   min-height: 44px;
   border-radius: 4px;
@@ -400,6 +424,7 @@ h6,
   letter-spacing: .5px;
   text-transform: uppercase;
   cursor: pointer;
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -414,7 +439,8 @@ h6,
 
 .button:focus {
   outline: none;
-  box-shadow: 0px 0px 5px 1px #fc3300;
+  -webkit-box-shadow: 0px 0px 5px 1px #fc3300;
+          box-shadow: 0px 0px 5px 1px #fc3300;
 }
 
 .button--border {
@@ -442,17 +468,24 @@ h6,
 }
 
 .checkbox {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 12px;
 }
 
 .checkbox__input {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   border: 1px solid #1e212c;
   width: 24px;
   height: 24px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -480,18 +513,25 @@ h6,
 }
 
 .radio {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 12px;
 }
 
 .radio__input {
   position: relative;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   border: 1px solid #1e212c;
   width: 24px;
   height: 24px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   border-radius: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -501,7 +541,9 @@ h6,
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 12px;
   height: 12px;
   border-radius: 50%;
@@ -533,14 +575,20 @@ h6,
 }
 
 .switch {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 12px;
 }
 
 .switch__input {
   position: relative;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   border: 1px solid #1e212c;
   border-radius: 24px;
   width: 48px;
@@ -552,11 +600,14 @@ h6,
   position: absolute;
   top: 50%;
   left: 0;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 24px;
   height: 24px;
   border-radius: 50%;
   background-color: #1e212c;
+  -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
 
@@ -566,7 +617,9 @@ h6,
 
 .switch__input:checked::before {
   background-color: #ff5a30;
-  transform: translate(24px, -50%);
+  -webkit-transform: translate(24px, -50%);
+      -ms-transform: translate(24px, -50%);
+          transform: translate(24px, -50%);
 }
 
 .switch__input:not(:disabled) {
@@ -587,8 +640,13 @@ h6,
 
 .input {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column-reverse;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 .input__native {
@@ -596,6 +654,22 @@ h6,
   border: 1px solid #1e212c;
   font-size: 14px;
   padding: 12px 15px;
+}
+
+.input__native::-webkit-input-placeholder {
+  color: #1e212c;
+}
+
+.input__native::-moz-placeholder {
+  color: #1e212c;
+}
+
+.input__native:-ms-input-placeholder {
+  color: #1e212c;
+}
+
+.input__native::-ms-input-placeholder {
+  color: #1e212c;
 }
 
 .input__native::placeholder {
@@ -642,7 +716,10 @@ h6,
   background-color: rgba(255,255,255,.5);
   color: #424551;
   margin-top: 0;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: background-color .2s ease-in-out;
   transition: background-color .2s ease-in-out;
 }
 
@@ -670,8 +747,11 @@ h6,
 }
 
 .slider__pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 45px 4px;
 }
 
@@ -687,6 +767,7 @@ h6,
   font-size: 28px;
   font-weight: 700;
   line-height: 150%;
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -719,11 +800,18 @@ h6,
   cursor: pointer;
   z-index: 100;
   border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   opacity: 0;
   visibility: hidden;
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -756,20 +844,25 @@ h6,
   top: 50%;
   left: 50%;
   z-index: 2;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   width: 80px;
   height: 80px;
 }
 
 .video-cover__button:hover {
-  filter: brightness(0.7);
+  -webkit-filter: brightness(0.7);
+          filter: brightness(0.7);
 }
 
 .video-cover__button img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .video-cover__img {
@@ -794,7 +887,8 @@ h6,
 .video-cover__img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .video-cover iframe {
@@ -808,6 +902,8 @@ h6,
 }
 
 .socials {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   gap: 16px;
 }
@@ -825,7 +921,8 @@ h6,
 .socials__icon {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .header {
@@ -842,8 +939,12 @@ h6,
 }
 
 .header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 60px;
 }
 
@@ -851,13 +952,15 @@ h6,
   display: block;
   width: 130px;
   height: 22px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .header__logo img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .header__burger {
@@ -868,8 +971,12 @@ h6,
   list-style: none;
   padding: 0;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 40px;
 }
 
@@ -903,13 +1010,19 @@ h6,
 
 .header-contacts {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 36px;
 }
 
 .header-contacts__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 12px;
 }
 
@@ -946,6 +1059,7 @@ h6,
 .burger::after,
 .burger::before {
   content: "";
+  -webkit-transition: all .3s ease 0s;
   transition: all .3s ease 0s;
   left: 0;
   position: absolute;
@@ -974,8 +1088,12 @@ h6,
   position: relative;
   min-height: 988px;
   padding: 50px 0 180px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff;
 }
 
@@ -996,8 +1114,11 @@ h6,
 
 .hero__bottom {
   margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -1010,7 +1131,8 @@ h6,
 .hero__img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .hero__img::after {
@@ -1021,6 +1143,7 @@ h6,
   z-index: 0;
   width: 100%;
   height: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(30, 33, 44, 0.6)), to(rgba(30, 33, 44, 0.6)));
   background: linear-gradient(0deg, rgba(30, 33, 44, 0.6) 0%, rgba(30, 33, 44, 0.6) 100%);
 }
 
@@ -1071,9 +1194,14 @@ h6,
 }
 
 .benefits {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px 0;
   margin: 0 -6vw;
 }
@@ -1091,9 +1219,12 @@ h6,
   position: absolute;
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 1px;
   height: 188px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(218, 219, 221, 0)), color-stop(12.33%, rgba(218, 219, 221, 0.5)), color-stop(51.91%, #DADBDD), color-stop(87.85%, rgba(218, 219, 221, 0.5)), to(rgba(218, 219, 221, 0)));
   background: linear-gradient(0deg, rgba(218, 219, 221, 0) 0%, rgba(218, 219, 221, 0.5) 12.33%, #DADBDD 51.91%, rgba(218, 219, 221, 0.5) 87.85%, rgba(218, 219, 221, 0) 100%);
 }
 
@@ -1136,6 +1267,30 @@ h6,
   outline: none;
 }
 
+.subscribe-form__input::-webkit-input-placeholder {
+  font-size: 14px;
+  line-height: 150%;
+  color: rgba(255,255,255,.6);
+}
+
+.subscribe-form__input::-moz-placeholder {
+  font-size: 14px;
+  line-height: 150%;
+  color: rgba(255,255,255,.6);
+}
+
+.subscribe-form__input:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 150%;
+  color: rgba(255,255,255,.6);
+}
+
+.subscribe-form__input::-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 150%;
+  color: rgba(255,255,255,.6);
+}
+
 .subscribe-form__input::placeholder {
   font-size: 14px;
   line-height: 150%;
@@ -1146,7 +1301,9 @@ h6,
   position: absolute;
   top: 50%;
   right: 0;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   max-width: 130px;
@@ -1165,37 +1322,52 @@ h6,
 }
 
 .footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 30px 50px;
 }
 
 .footer__col {
   max-width: 495px;
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
 
 .footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 24px 60px;
 }
 
 .footer__logo {
   display: inline-block;
   width: 142px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .footer__logo img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .footer__desc {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .footer__title {
@@ -1205,8 +1377,11 @@ h6,
 
 .footer__body {
   margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px 10%;
 }
 
@@ -1399,15 +1574,23 @@ h6,
     min-width: 50vw;
     overflow-y: auto;
     padding: 20px 20px 10px 20px;
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+    transition: -webkit-transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
   }
 
   .top-menu:not(.is-active) {
-    transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
   }
 
   .top-menu__list {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .top-menu__close {
@@ -1423,7 +1606,10 @@ h6,
   }
 
   .benefits {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 0;
   }
 
@@ -1476,7 +1662,8 @@ h6,
   }
 
   .header-contacts {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .hero__slide {
@@ -1519,7 +1706,8 @@ h6,
   }
 
   .footer__top {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .footer__title {
