feat: add some var

--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -7,9 +7,15 @@ $main-bg-color: #fff;
 
 $main-accent-color: #FF5A30;
 $main-accent-color-hover: #FC3300;
+$grey-200: #F4F5F6;
+$grey-400: #D7DADD;
+$grey-600: #9A9CA5;
 $grey-700: #787A80;
 $grey-800: #424551;
 $grey-900: #1E212C;
+
+$danger: #FF4242;
+$success: #03CEA4;
 
 // fonts
 $main-font-family: "Ubuntu", sans-serif;
