--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 @import "../components/hero/";
 @import "../components/section/";
 @import "../components/benefits/";
+@import "../components/small-form/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
