--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -52,8 +52,11 @@ h4, .h4 {
   font-size: 28px;
   line-height: 150%;
 
-  @media only screen and (max-width: $bp-lg){
-      
+  @media only screen and (max-width: $bp-md){
+    font-size: 24px;
+  }
+  @media only screen and (max-width: $bp-sm){
+     font-size: 20px; 
   }
 }
 
