--- a/src/ui/input/index.scss
+++ b/src/ui/input/index.scss
@@ -47,16 +47,23 @@
     display: block;
     resize: none;
     height: 100px;
-
   }
 
   &__status {
     font-size: 12px;
     position: absolute;
     top: 100%;
-    left: 0;
+    left: -5px;
+    z-index: 1;
+    background-color: rgba($color: $white, $alpha: 0.4);
+    padding: 0 5px;
+    border-radius: 4px;
     display: none;
-  }
+
+    & span {
+      display: block;
+    }
+   }
 
   &--success &__status{
     display: block;
@@ -64,7 +71,7 @@
   }
   &--success &__native{
     padding-right: 40px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M14.4717 3.52827C14.7321 3.78862 14.7321 4.21073 14.4717 4.47108L6.47173 12.4711C6.21138 12.7314 5.78927 12.7314 5.52892 12.4711L1.52892 8.47108C1.26857 8.21073 1.26857 7.78862 1.52892 7.52827C1.78927 7.26792 2.21138 7.26792 2.47173 7.52827L6.00033 11.0569L13.5289 3.52827C13.7893 3.26792 14.2114 3.26792 14.4717 3.52827Z' fill='%2303CEA4'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M14.4717 3.52827C14.7321 3.78862 14.7321 4.21073 14.4717 4.47108L6.47173 12.4711C6.21138 12.7314 5.78927 12.7314 5.52892 12.4711L1.52892 8.47108C1.26857 8.21073 1.26857 7.78862 1.52892 7.52827C1.78927 7.26792 2.21138 7.26792 2.47173 7.52827L6.00033 11.0569L13.5289 3.52827C13.7893 3.26792 14.2114 3.26792 14.4717 3.52827Z' fill='%2303CEA4'/%3E%3C/svg%3E") !important;
     background-position: center right 16px;
     background-repeat: no-repeat;
     background-size: 16px;
