feat: implement favicon generation

--- a/src/components/head/index.html
+++ b/src/components/head/index.html
@@ -4,4 +4,8 @@
   <link rel="stylesheet" href="assets/lib/lib.css">
   <link rel="stylesheet" href="assets/css/style.min.css">
   <title>@@title</title>
+
+  <link rel="icon" href="assets/favicon/favicon.svg">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
 </head>
