feat: implement modal ui connect

--- a/src/components/hero/index.html
+++ b/src/components/hero/index.html
@@ -9,7 +9,7 @@
             <p class="hero__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.</p>
             <div class="hero__bottom">
               <button class="hero__button button button--lg button--white-border">Learn more about us</button>
-              <a class="hero__button button button--lg" href="">SUBMIT REQUEST</a>
+              <a class="hero__button button button--lg" href="#" data-modal="modal-SV">SUBMIT REQUEST</a>
             </div>
           </div>
           <picture class="hero__img">
@@ -25,7 +25,7 @@
             <h2 class="h1 hero__title">Browse our selected projects</h2>
             <p class="hero__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis voluptate iure exercitationem, eligendi explicabo dolores laborum id fuga! Laboriosam repellat quaerat in cupiditate error consequuntur provident assumenda magnam! Blanditiis, nisi!</p>
             <div class="hero__bottom">
-              <a class="hero__button button button--white-border button--lg" href="">SUBMIT REQUEST</a>
+              <a class="hero__button button button--white-border button--lg" href="#" data-modal="modal-1">SUBMIT REQUEST</a>
             </div>
           </div>
           <picture class="hero__img">
@@ -41,7 +41,7 @@
             <h2 class="h1 hero__title">Lorem ipsum dolor</h2>
             <p class="hero__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit ab sunt dignissimos, voluptatum tempora doloribus, et debitis laborum, hic reprehenderit fugiat quos ea molestiae at deleniti soluta pariatur ullam adipisci?</p>
             <div class="hero__bottom">
-              <button class="hero__button button button--lg">Learn more about us</button>
+              <a class="hero__button button button--lg" href="#">Learn more about us</a>
             </div>
           </div>
           <picture class="hero__img">
@@ -58,7 +58,7 @@
             <p class="hero__text">Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.</p>
             <div class="hero__bottom">
               <button class="hero__button button button--lg button--white-border">Learn more about us</button>
-              <a class="hero__button button button--lg" href="">SUBMIT REQUEST</a>
+              <a class="hero__button button button--lg" href="#" data-modal="modal-1">SUBMIT REQUEST</a>
             </div>
           </div>
           <picture class="hero__img">
