--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import "../ui/slider/";
 @import "../ui/go-to-top/";
 @import "../ui/video-cover/";
+@import "../ui/modal/";
 
 
 //Подключение компонентов
