fix: change footer

--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -19,12 +19,14 @@
       </div>
     </div>
     <div class="footer__body">
-      <address class="footer__main-info">
+      <div class="footer__main-info">
         <h6 class="footer__subtitle">HEAD OFFICE</h6>
-        <p><span>Address:</span>8502 Preston Rd. Inglewood, New York</p>
-        <p><span>Call:</span><a href="tel:4055550128">(405) 555-0128</a></p>
-        <p><span>Email:</span><a href="mailto:hello@createx.com">hello@createx.com</a></p>
-      </address>
+        <address>
+          <p><span>Address:</span>8502 Preston Rd. Inglewood, New York</p>
+          <p><span>Call:</span><a href="tel:4055550128">(405) 555-0128</a></p>
+          <p><span>Email:</span><a href="mailto:hello@createx.com">hello@createx.com</a></p>
+        </address>        
+      </div>
       <div class="footer__menu">
         <h6 class="footer__subtitle">WHO WE ARE</h6>
         <ul  class="footer__menu-list">
