--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -42,8 +42,11 @@ h3, .h3 {
   font-size: 32px;
   line-height: 150%;
 
-  @media only screen and (max-width: $bp-lg){
-      
+  @media only screen and (max-width: $bp-md){
+      font-size: 28px;
+  }
+  @media only screen and (max-width: $bp-sm){
+     font-size: 24px; 
   }
 }
 
