feat: add some vars

--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -8,6 +8,7 @@ $main-bg-color: #fff;
 $main-accent-color: #FF5A30;
 $main-accent-color-hover: #FC3300;
 $grey-200: #F4F5F6;
+$grey-300: #E5E8ED;
 $grey-400: #D7DADD;
 $grey-600: #9A9CA5;
 $grey-700: #787A80;
@@ -16,6 +17,9 @@ $grey-900: #1E212C;
 
 $danger: #FF4242;
 $success: #03CEA4;
+
+//shadow
+$box-shadow-large: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(30, 33, 44, 0.08), 0px 26px 24px -10px rgba(30, 33, 44, 0.10), 0px 60px 80px -20px rgba(30, 33, 44, 0.16);
 
 // fonts
 $main-font-family: "Ubuntu", sans-serif;
