feat: add select to modal

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "../ui/radio/";
 @import "../ui/switch/";
 @import "../ui/input/";
+@import "../ui/select/";
 @import "../ui/slider/";
 @import "../ui/go-to-top/";
 @import "../ui/video-cover/";
