--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "../ui/switch/";
 @import "../ui/input/";
 @import "../ui/select/";
+@import "../ui/add-file/";
 @import "../ui/slider/";
 @import "../ui/go-to-top/";
 @import "../ui/video-cover/";
