--- a/src/components/our-services/index.scss
+++ b/src/components/our-services/index.scss
@@ -60,14 +60,17 @@
   }
 
   &__icon {
+    display: block;
     width: 52px;
     height: 52px;
+    margin: 0 auto 24px;
     fill: $main-accent-color;
     transition: fill .2s ease-in-out;
 
     @media only screen and (max-width: $bp-sm){
        width: 40px;
        height: 40px; 
+       margin-bottom: 10px;
     }
   }
 
