feat: add our services section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import "../components/section/";
 @import "../components/benefits/";
 @import "../components/small-form/";
+@import "../components/our-services/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
