--- a/src/components/section/index.scss
+++ b/src/components/section/index.scss
@@ -1,19 +1,29 @@
 @import 'src/styles/global/vars';
 
 .section {
-
+  position: relative;
   padding: 120px 0;
 
   @media only screen and (max-width: $bp-xl){
-     padding: 80px 0; 
+    padding: 80px 0; 
   }
 
   @media only screen and (max-width: $bp-md){
-     padding: 50px 0; 
+    padding: 50px 0; 
   }
 
   &--hidden {
     overflow: hidden;
+  }
+
+  // size
+
+  &--md-pd {
+    padding: 85px 0;
+
+    @media only screen and (max-width: $bp-md){
+      padding: 40px 0; 
+    }
   }
 
   &--sm-pd {
@@ -21,7 +31,17 @@
 
     @media only screen and (max-width: $bp-md){
       padding: 30px 0; 
-   }
+    }
+  }
+
+  // decor
+  &__cover-bg {
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   h2, .h2 {
@@ -36,6 +56,24 @@
     color: $grey-700;
   }
 
+  &__bottom {
+    margin-top: 85px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 20px 40px;
+    text-align: center;
+
+    @media only screen and (max-width: $bp-md){
+       margin-top: 50px; 
+    }
+
+    @media only screen and (max-width: $bp-sm){
+       margin-top: 30px; 
+    }
+  }
+
   &__video {
     margin-top: 60px;
 
@@ -44,7 +82,7 @@
     }
   }
 
-  & .benefits {
+  & .benefits, & .our-services {
     margin-top: 60px;
 
     @media only screen and (max-width: $bp-md){
