fix: add list and links to our services

--- a/src/components/our-services/index.html
+++ b/src/components/our-services/index.html
@@ -1,50 +1,58 @@
-<div class="our-services">
-  <div class="our-services__item">
-    <div class="our-services__item-content">
-      <svg class="our-services__icon icon-svg">
-        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-construction"></use>
-      </svg>
-      <h5 class="our-services__title">Construction</h5>
-    </div>
-    <picture class="our-services__img">
-      <source type="image/webp" srcset="assets/img/services/construction.webp">
-      <img src="assets/img/services/construction.jpg" alt="Construction">
-    </picture>
-  </div>
-  <div class="our-services__item">
-    <div class="our-services__item-content">
-      <svg class="our-services__icon icon-svg">
-        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-plan"></use>
-      </svg>
-      <h5 class="our-services__title">Project Development</h5>
-    </div>
-    <picture class="our-services__img">
-      <source type="image/webp" srcset="assets/img/services/project.webp">
-      <img src="assets/img/services/project.jpg" alt="Project Development">
-    </picture>
-  </div>
-  <div class="our-services__item">
-    <div class="our-services__item-content">
-      <svg class="our-services__icon icon-svg">
-        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-pantone"></use>
-      </svg>
-      <h5 class="our-services__title">Interior Design</h5>
-    </div>
-    <picture class="our-services__img">
-      <source type="image/webp" srcset="assets/img/services/design.webp">
-      <img src="assets/img/services/design.jpg" alt="Interior Design">
-    </picture>
-  </div>
-  <div class="our-services__item">
-    <div class="our-services__item-content">
-      <svg class="our-services__icon icon-svg">
-        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-painting"></use>
-      </svg>
-      <h5 class="our-services__title">Repairs</h5>
-    </div>
-    <picture class="our-services__img">
-      <source type="image/webp" srcset="assets/img/services/repairs.webp">
-      <img src="assets/img/services/repairs.jpg" alt="Repairs">
-    </picture>
-  </div>
-</div>
+<ul class="our-services">
+  <li class="our-services__item">
+    <a class="our-services__link" href="#" >
+      <div class="our-services__item-content">
+        <svg class="our-services__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-construction"></use>
+        </svg>
+        <h5 class="our-services__title">Construction</h5>
+      </div>
+      <picture class="our-services__img">
+        <source type="image/webp" srcset="assets/img/services/construction.webp">
+        <img src="assets/img/services/construction.jpg" alt="Construction">
+      </picture>
+    </a>
+  </li>
+  <li class="our-services__item">
+    <a class="our-services__link" href="#" >
+      <div class="our-services__item-content">
+        <svg class="our-services__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-plan"></use>
+        </svg>
+        <h5 class="our-services__title">Project Development</h5>
+      </div>
+      <picture class="our-services__img">
+        <source type="image/webp" srcset="assets/img/services/project.webp">
+        <img src="assets/img/services/project.jpg" alt="Project Development">
+      </picture>
+    </a>    
+  </li>
+  <li class="our-services__item">
+    <a class="our-services__link" href="#" >
+      <div class="our-services__item-content">
+        <svg class="our-services__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-pantone"></use>
+        </svg>
+        <h5 class="our-services__title">Interior Design</h5>
+      </div>
+      <picture class="our-services__img">
+        <source type="image/webp" srcset="assets/img/services/design.webp">
+        <img src="assets/img/services/design.jpg" alt="Interior Design">
+      </picture>
+    </a>    
+  </li>
+  <li class="our-services__item">
+    <a class="our-services__link" href="#" >
+      <div class="our-services__item-content">
+        <svg class="our-services__icon icon-svg">
+          <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-painting"></use>
+        </svg>
+        <h5 class="our-services__title">Repairs</h5>
+      </div>
+      <picture class="our-services__img">
+        <source type="image/webp" srcset="assets/img/services/repairs.webp">
+        <img src="assets/img/services/repairs.jpg" alt="Repairs">
+      </picture>
+    </a>    
+  </li>
+</ul>
