--- a/src/components/our-services/index.scss
+++ b/src/components/our-services/index.scss
@@ -1,11 +1,13 @@
 @import 'src/styles/global/vars';
 
 .our-services {
-
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
   gap: 30px;
 
   @media only screen and (max-width: $bp-lg){
@@ -23,11 +25,6 @@
     max-width: 285px;
     aspect-ratio: 1/1;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
     @extend %box-small-shadow;
     border: 1px solid $grey-300;
     padding: 15px;
@@ -38,20 +35,29 @@
     }
     
     @media only screen and (max-width: $bp-sm){
-        padding: 5px;
         max-width: 250px;
+        padding: 5px;
     }
   }
 
-  &__item:hover {
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__link:hover {
     color: $white;
   }
 
-  &__item:hover &__icon {
+  &__link:hover &__icon {
     fill: $white;
   }
 
-  &__item:hover &__img{
+  &__link:hover &__img{
     opacity: 1;
   }
 
@@ -76,8 +82,6 @@
   }
 
   &__title {
-    transition: color .2s ease-in-out;
-
     @media only screen and (max-width: $bp-sm){
        font-size: 16px; 
     }
